cmake_minimum_required(VERSION 3.19)

set(CMAKE_CXX_COMPILER  /opt/rh/gcc-toolset-10/root/usr/bin/g++)
set(CMAKE_C_COMPILER /opt/rh/gcc-toolset-10/root/usr/bin/gcc)

project(rtbserver)

include(cmake/SetupEnvironment.cmake)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib/)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib/)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/)

set(CMAKE_MODULE_PATH
  ${CMAKE_MODULE_PATH}
  ${CMAKE_CURRENT_SOURCE_DIR}/cmake/Modules
)

if(NOT DEFINED UNIXCOMMONS)
  message(STATUS "CMAKE_CURRENT_SOURCE_DIR: ${CMAKE_CURRENT_SOURCE_DIR}")
  SET(UNIXCOMMONS "${CMAKE_CURRENT_SOURCE_DIR}/../unixcommons_cobrazz")
endif()

set(USE_USERVER_PACKAGE FALSE CACHE INTERNAL "")

message(STATUS "Use unixcommons: ${UNIXCOMMONS}")
set(UNIXCOMMONS_BUILD_ROOT ${CMAKE_CURRENT_BINARY_DIR}/unixcommons)

include_directories(
  .
  Commons
  ${rocksdb_SOURCE_DIR}/include
  ${UNIXCOMMONS}/src
  ${UNIXCOMMONS}/src/CORBA
  ${UNIXCOMMONS_BUILD_ROOT}/IDL_COMMON
)
include_directories(${CMAKE_CURRENT_BINARY_DIR})

set(CMAKE_MODULE_PATH
  ${CMAKE_MODULE_PATH}
  ${UNIXCOMMONS}/cmake/Modules/)

set(Boost_NO_WARN_NEW_VERSIONS ON)

find_package(ACE REQUIRED)
find_package(Boost REQUIRED)
find_package(GTest REQUIRED)
find_package(IDL REQUIRED)
find_package(LL REQUIRED)
find_package(LibXml2 REQUIRED)
find_package(Nghttp2 REQUIRED)
find_package(OpenSSL REQUIRED)
find_package(PB REQUIRED)
find_package(PST REQUIRED)
find_package(Protobuf REQUIRED)
find_package(Threads REQUIRED)
find_package(XSD REQUIRED)
find_package(XercesC REQUIRED)
find_package(YY REQUIRED)
find_package(gRPC REQUIRED)
if (${USE_USERVER_PACKAGE})
  find_package(userver REQUIRED)
endif()

set(CORBA_INCLUDES ${UNIXCOMMONS}/src/CORBA)
set(TMP_SOURCES ${CMAKE_CURRENT_BINARY_DIR})

set(PB_DIRECTORY ${TMP_SOURCES}/PB_COMMON)
include_directories(${PB_DIRECTORY})

set(IDL_DIRECTORY ${TMP_SOURCES}/IDL_COMMON)
include_directories(${IDL_DIRECTORY})

set(XSD_DIRECTORY ${TMP_SOURCES}/XSD_COMMON)
include_directories(${XSD_DIRECTORY} ${XSD_DIRECTORY}/xsd)

set(PST_DIRECTORY ${TMP_SOURCES}/PST_COMMON)
include_directories(${PST_DIRECTORY})

add_subdirectory(${UNIXCOMMONS} ${UNIXCOMMONS_BUILD_ROOT})

ADD_SUBDIRECTORY(CampaignSvcs)
ADD_SUBDIRECTORY(ChannelSearchSvcs)
ADD_SUBDIRECTORY(ChannelSvcs)
ADD_SUBDIRECTORY(Commons)
ADD_SUBDIRECTORY(Controlling)
ADD_SUBDIRECTORY(Frontends)
ADD_SUBDIRECTORY(LogCommons)
ADD_SUBDIRECTORY(LogProcessing)
ADD_SUBDIRECTORY(Plain)
ADD_SUBDIRECTORY(Predictor)
ADD_SUBDIRECTORY(PredictorSvcs)
ADD_SUBDIRECTORY(ProfilingCommons)
ADD_SUBDIRECTORY(RequestInfoSvcs)
ADD_SUBDIRECTORY(UserInfoSvcs)
ADD_SUBDIRECTORY(UtilCommons)
ADD_SUBDIRECTORY(Utils)
ADD_SUBDIRECTORY(tests)
ADD_SUBDIRECTORY(xsd)

install(DIRECTORY bin/ DESTINATION bin USE_SOURCE_PERMISSIONS)
install(DIRECTORY lib/ DESTINATION lib USE_SOURCE_PERMISSIONS)
install(DIRECTORY ConfigSys/ DESTINATION bin USE_SOURCE_PERMISSIONS)
install(DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY} DESTINATION bin USE_SOURCE_PERMISSIONS)
install(DIRECTORY "${CMAKE_SOURCE_DIR}/Predictor/Scripts/" DESTINATION bin
  FILES_MATCHING PATTERN "*.pl" PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ GROUP_EXECUTE GROUP_READ WORLD_EXECUTE WORLD_READ)

install(DIRECTORY ${CMAKE_LIBRARY_OUTPUT_DIRECTORY} DESTINATION lib
  FILES_MATCHING PATTERN "*.so" EXCLUDE)
install(DIRECTORY ${CMAKE_LIBRARY_OUTPUT_DIRECTORY} DESTINATION lib
  FILES_MATCHING PATTERN "*.so" PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ GROUP_EXECUTE GROUP_READ WORLD_EXECUTE WORLD_READ)
install(DIRECTORY "${CMAKE_SOURCE_DIR}/modules/" DESTINATION lib USE_SOURCE_PERMISSIONS)
install(DIRECTORY "${CMAKE_SOURCE_DIR}/PyCommons/" DESTINATION lib/PyCommons USE_SOURCE_PERMISSIONS)

install(DIRECTORY "${CMAKE_SOURCE_DIR}/DACS" DESTINATION . USE_SOURCE_PERMISSIONS)
install(DIRECTORY "${CMAKE_SOURCE_DIR}/CMS/Plugin/data/mibs" DESTINATION . USE_SOURCE_PERMISSIONS)
install(DIRECTORY "${CMAKE_SOURCE_DIR}/xsd" DESTINATION . USE_SOURCE_PERMISSIONS)
