ADD_SUBDIRECTORY(UserBindAdmin)
ADD_SUBDIRECTORY(UserBindController)
ADD_SUBDIRECTORY(UserBindServer)
ADD_SUBDIRECTORY(UserBindUtil)
ADD_SUBDIRECTORY(UserInfoAdmin)
ADD_SUBDIRECTORY(UserInfoCommons)
ADD_SUBDIRECTORY(UserInfoExchanger)
ADD_SUBDIRECTORY(UserInfoExchangerProxy)
ADD_SUBDIRECTORY(UserInfoManager)
ADD_SUBDIRECTORY(UserInfoManagerController)
ADD_SUBDIRECTORY(UserOperationGenerator)
