ADD_SUBDIRECTORY(CTRGenerator)
ADD_SUBDIRECTORY(DNSDecodeUtil)
ADD_SUBDIRECTORY(GPT)
ADD_SUBDIRECTORY(Predictor)
ADD_SUBDIRECTORY(ProfileDump)
ADD_SUBDIRECTORY(TrivialCTRConfigGenerator)
ADD_SUBDIRECTORY(UIDGeneratorUtil)
ADD_SUBDIRECTORY(UserExtractUtil)
ADD_SUBDIRECTORY(UserIdUtil)
ADD_SUBDIRECTORY(YaMetrikaAggregator)