ADD_SUBDIRECTORY(AdServerCommons)
ADD_SUBDIRECTORY(CampaignSvcs)
ADD_SUBDIRECTORY(ChannelSearchSvcs)
ADD_SUBDIRECTORY(ChannelSvcs)
ADD_SUBDIRECTORY(Controlling)
ADD_SUBDIRECTORY(Frontends)
ADD_SUBDIRECTORY(LogProcessing)
ADD_SUBDIRECTORY(Predictor)
ADD_SUBDIRECTORY(RequestInfoSvcs)
ADD_SUBDIRECTORY(UserInfoSvcs)
ADD_SUBDIRECTORY(Utils)
ADD_SUBDIRECTORY(tests)

