add_executable(ChannelAdmin
  Application.cpp
)

target_link_libraries(ChannelAdmin
  ChannelCommons
  ChannelContainer
  ChannelProxyIDL
  ChannelProxy_v28IDL
  ChannelSessionFactory
  ChannelUpdate_v28IDL
  Commons
  DictionaryProviderIDL
  Generics
  Logger
  UServerUtils
  UtilCommons
  XMLUtility
)